banner content added

--- a/index.html
+++ b/index.html
@@ -7,9 +7,33 @@
     <title>G3-architects-website</title>
 </head>
 <body>
+    <!-- headre start here -->
    <header>
-
+    <nav>
+        <h1 class="nav-title">G3 Architects</h1>
+        <ul>
+            <li><a href="#">Home </a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact </a></li>
+            <li><a href="#">Login </a></li>
+        </ul>
+    </nav>
+    <div class="banner">
+        <div class="banner-content">
+            <h1 class="banner-title">
+                Brand New 
+                Group of Architects  
+            </h1>
+            <p class="banner-descripation"> 
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            </p>
+           <button class="btn-primary">Explore More</button>
+        </div>
+       <img class="banner-img" src="./images/banner.png" alt="">
+    </div>
    </header>
+   <!-- header end here -->
+
    <main>
 
    </main>
