--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </p>
            <button class="btn-primary">Explore More</button>
         </div>
-       <img class="banner-img" src="./images/banner.png" alt="">
+       <img src="./images/banner.png" alt="">
     </div>
    </header>
    <!-- header end here -->
