--- a/index.html
+++ b/index.html
@@ -34,9 +34,24 @@
    </header>
    <!-- header end here -->
 
+   <!-- main start here -->
    <main>
-
+    <!-- teams-section start here -->
+    <section class="teams-container">
+        <div class="teams-img-container">
+            <img src="./images/team1.png" alt="">
+            <img src="./images/team2.png" alt="">
+            <img src="./images/team3.png" alt="">
+            <img src="./images/team4.png" alt="">
+        </div>
+        <div class="teams-content">
+            <h2 class="teams-title"><span class="quick-list">Quick list </span>  <span>of Our </span>  <span class="text-features">Features  </span></h2>
+            <p class="teams-descraption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More </button>
+        </div>
+    </section>
    </main>
+   <!-- main end here -->
    <footer>
 
    </footer>
