--- a/index.html
+++ b/index.html
@@ -55,8 +55,40 @@
     <!-- Features section start -->
     <section class="features">
 
+         <div class="features-content">
+             <h3 class="features-title">Features you will love & enjoy </h3>
+             <p class="class-features-descraption">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+             </p>
+
+            <div class="card">
+                <h4 style="font-size: 20px;">Dexktop & Mobile Version </h4>
+                <p style="margin-top:10px;"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+            </div>
+            <div class="card">
+                <h4 style="font-size: 20px;">Dexktop & Mobile Version </h4>
+                <p style="margin-top:10px;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+            </div>
+            <div class="card">
+                <h4 style="font-size: 20px;">Dexktop & Mobile Version </h4>
+                <p style="margin-top:10px;" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+            </div>
+            <div class="card">
+                <h4 style="font-size: 20px;">Dexktop & Mobile Version </h4>
+                <p style="margin-top:10px;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+            </div>
+         </div>
+
+         <div class="features-img">
+            <img src="./images/architect.png" alt="">
+            <div class="ten-years-badge">
+                <h2>10+ Years</h2>
+                <p>Experience </p>
+            </div>
+         </div>
     </section>
    <!-- features section end -->
+
     <!-- some section start here -->
     <section class="Some-Facts ">
        <h3 class="some-facts-title">Some Facts </h3>
