added footer section

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
    </main>
    <!-- main end here -->
-   <footer>
-
+   <footer class="footer">
+      <p>All rights reserved copyright@2024 startup landing page design </p>
    </footer>
 </body>
 </html>
