added all commit

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
                 <p style="margin-top:10px;"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
             </div>
             <div class="card">
-                <h4 style="font-size: 20px;">Dexktop & Mobile Version </h4>
-                <p style="margin-top:10px;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+                <h4 style="font-size: 20px;">Drag & Drop Builder </h4>
+                <p style="margin-top:10px;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
             </div>
             <div class="card">
-                <h4 style="font-size: 20px;">Dexktop & Mobile Version </h4>
-                <p style="margin-top:10px;" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+                <h4 style="font-size: 20px;"> Awesome Modern Design </h4>
+                <p style="margin-top:10px;" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
             </div>
             <div class="card">
-                <h4 style="font-size: 20px;">Dexktop & Mobile Version </h4>
+                <h4 style="font-size: 20px;"> Super Easy to Edit </h4>
                 <p style="margin-top:10px;">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
             </div>
          </div>
